# rust-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  cargo-generate.toml  prod.yml
.github/workflows/: release.yml
examples/: client.rs  client_manager.rs  conf_file.rs  db_conn.rs  first_demo.rs  get_ten.rs
proto/demo/: explanation.proto  greeter.proto
src/: grpc_server.rs  http_server.rs  lib.rs  main.rs
src/app/: server.rs
src/client/: factory.rs  manager.rs  mod.rs
src/conf/: app.rs  base.rs  grpc.rs  mod.rs
src/db/: pgsql.rs
src/handlers/: mod.rs
src/handlers/common/: model.rs
src/handlers/explanation_hu/: query.rs
src/pb/: explanation.rs  greeter.rs  mod.rs
src/response/: errors.rs
src/router/: explanation_hu.rs  mod.rs
src/service_impl/: explanation.rs  greeter.rs  mod.rs  model.rs
src/state/: app_state.rs
src/utils/: convert.rs  mod.rs  serializer_items.rs  time_serializer.rs  timezone.rs
tests/: first_test.rs
