[package]
name = "template"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["<Qiqianily> <Joedian@163.com>"]
description = "A template for Rust projects"

[[bin]]
name = "grpc_server"
path = "src/grpc_server.rs"

[[bin]]
name = "http_server"
path = "src/http_server.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = {version = "4.0", features = ["derive"] }
config = { version = "0.15.19", features = ["yaml"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "derive", "time"] }
redis = {version = "1.0", features = ["tokio-comp"]}
mobc = "0.9.0"
mobc-redis = "0.9.0"
tracing = { version = "0.1", features = ["async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
uuid = { version = "1.20", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-valid = { version = "0.24.0", features = ["full_validator"] }
validator = { version = "0.20.0", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout", "limit", "normalize-path", "auth"] }
xid = "1.1.1"
bytesize = "2.3.1"

[build-dependencies]
anyhow = "1.0"
tonic-prost-build = "0.14"
